// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-random should chain deep sequences correctly 1`] = `"kQCpQE0XCVJlPmVpZVKAZeOX8CAUrICRuHvKICbi3exOPZan"`;

exports[`feature-random should chain deep sequences correctly 2`] = `"kQDHcW-z5Cd53Xrhdx-srxydO_SqN267xSsBElmH_JX5Rjaj"`;

exports[`feature-random should chain deep sequences correctly 3`] = `"kQBJ_Xydk0-59l3OdTLEL8ymuynX_Iw1TwhOOqKRSPkEtpPH"`;

exports[`feature-random should chain deep sequences correctly 4`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQCpQE0XCVJlPmVpZVKAZeOX8CAUrICRuHvKICbi3exOPZan",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 15956n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQCpQE0XCVJlPmVpZVKAZeOX8CAUrICRuHvKICbi3exOPZan",
            "to": "kQDHcW-z5Cd53Xrhdx-srxydO_SqN267xSsBElmH_JX5Rjaj",
            "type": "internal",
            "value": 9969211000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 5`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQCpQE0XCVJlPmVpZVKAZeOX8CAUrICRuHvKICbi3exOPZan",
          "to": "kQDHcW-z5Cd53Xrhdx-srxydO_SqN267xSsBElmH_JX5Rjaj",
          "type": "internal",
          "value": 9969211000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14857n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message",
              "type": "text",
            },
            "bounce": true,
            "from": "kQDHcW-z5Cd53Xrhdx-srxydO_SqN267xSsBElmH_JX5Rjaj",
            "to": "kQBJ_Xydk0-59l3OdTLEL8ymuynX_Iw1TwhOOqKRSPkEtpPH",
            "type": "internal",
            "value": 9944624000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`feature-random should chain deep sequences correctly 6`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message",
            "type": "text",
          },
          "bounce": true,
          "from": "kQDHcW-z5Cd53Xrhdx-srxydO_SqN267xSsBElmH_JX5Rjaj",
          "to": "kQBJ_Xydk0-59l3OdTLEL8ymuynX_Iw1TwhOOqKRSPkEtpPH",
          "type": "internal",
          "value": 9944624000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 14785n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "text": "Message2",
              "type": "text",
            },
            "bounce": true,
            "from": "kQBJ_Xydk0-59l3OdTLEL8ymuynX_Iw1TwhOOqKRSPkEtpPH",
            "to": "kQBJ_Xydk0-59l3OdTLEL8ymuynX_Iw1TwhOOqKRSPkEtpPH",
            "type": "internal",
            "value": 9920297000n,
          },
        ],
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Message2",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBJ_Xydk0-59l3OdTLEL8ymuynX_Iw1TwhOOqKRSPkEtpPH",
          "to": "kQBJ_Xydk0-59l3OdTLEL8ymuynX_Iw1TwhOOqKRSPkEtpPH",
          "type": "internal",
          "value": 9920297000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4825n,
      },
    ],
  },
]
`;
